<resources>
    <string name="app_name">PunchIn Free</string>
    <string name="app_url">http://www.facebook.com/apps.punchin</string>
    <string name="preferences">Preferences</string>
    <string name="label_tasks">Tasks</string>
    <string name="label_daily_note">Daily Notes</string>
    <string name="label_task_list">Task List</string>
    <string name="label_punch_in">Punch In</string>
    <string name="label_task_note">Task Notes</string>
    <string name="label_punch_out">Punch Out</string>
    <string name="label_clear_time">Clear Time</string>
    <string name="label_remove_task_time">Are you sure you wish to remove the time from this task?</string>
    <string name="label_no_task_selected">No task was selected.</string>
    <string name="label_event_list">Event List</string>
    <string name="tag_category_function_name">Function Name</string>
    <string name="label_event_log">Event Log</string>
    <string name="punched_in">Punched In</string>
    <string name="punched_out">Punched Out</string>
    <string name="message_no_events_today">No events found.</string>
    <string name="todo_preferences">TODO: ADD PREFERENCES SCREEN</string>
    <string name="todo_tasks">TODO: ADD TASKS SCREEN</string>
    <string name="label_change_date">Change Date</string>
    <string name="label_empty"/>
    <string name="label_save">Save</string>
    <string name="hint_daily_notes_here">Enter your daily notes here.</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_add_task">Add Task</string>
    <string name="task_repeat_no_repeat">Does not repeat</string>
    <string name="task_repeat_every_day">Every day</string>
    <string name="task_repeat_week_days">Week days</string>
    <string name="task_repeat_weekends">Weekends</string>
    <string name="task_repeat_weekly">Weekly</string>
    <string name="task_repeat_fortnightly">Fortnightly</string>
    <string name="task_repeat_monthly">Monthly</string>
    <string name="task_repeat_yearly">Yearly</string>
    <string name="label_repeating_option">Repeat</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_yesterday">Yesterday</string>
    <string name="label_today">Today</string>
    <string name="label_tomorrow">Tomorrow</string>
    <string name="hint_task_description">Task Description</string>
    <string name="label_saving">Saving&#8230;</string>
    <string name="message_task_requires_description">Please enter a description.</string>
    <string name="message_punch_out_first">You need to punch out of this task first.</string>
    <string name="label_hourly_rate">Hourly Rate</string>
    <string name="label_set">Set</string>
    <string name="hint_enter_hourly_rate">Enter hourly rate here</string>
    <string name="hint_task_notes_here">Enter your task notes here.</string>
    <string name="label_edit_task">Edit Task</string>
    <string name="label_status">Status</string>
    <string name="label_activate">Activate</string>
    <string name="label_deactivate">Deactivate</string>
    <string name="label_active">Active</string>
    <string name="label_inactive">Inactive</string>
    <string name="hint_filter_tasks">Filter your tasks here</string>
    <string name="message_tasks_reorder">Sort your tasks by long pressing on one and dragging it to another spot.</string>
    <string name="label_filter">Filter</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_description">Description</string>
    <string name="label_none">None</string>
    <string name="hint_client_name">Client Name</string>
    <string name="label_add_client">Add Client</string>
    <string name="label_edit_client">Edit Client</string>
    <string name="label_client_address">Client Address</string>
    <string name="hint_client_address_here">Enter your client address here</string>
    <string name="label_email">Email</string>
    <string name="label_no_email">No email</string>
    <string name="label_mobile">Mobile</string>
    <string name="message_client_requires_name">Please enter a name.</string>
    <string name="label_client">Client</string>
    <string name="label_no_client_selected">No client selected</string>
    <string name="label_select_client">Select Client</string>
    <string name="message_no_clients_create_new">You have no clients to select.  Would you like to create one?</string>
    <string name="hint_filter_clients">Filter your clients here</string>
    <string name="label_client_list">Client List</string>
    <string name="label_clients">Clients</string>
    <string name="label_no_address">No address</string>
    <string name="label_no_mobile">No mobile</string>
    <string name="hint_enter_mobile_here">Enter mobile number here</string>
    <string name="label_normal_working_hours">Normal Working Hours</string>
    <string name="label_overtime_rate">Overtime Rate</string>
    <string name="label_time_and_half">Time and a half</string>
    <string name="label_double_time">Double time</string>
    <string name="label_triple_time">Triple time</string>
    <string name="label_per_hour">per hour</string>
    <string name="label_hours_per_day">hours per day</string>
    <string name="label_same_as_hourly_rate">Same as hourly rate</string>
    <string name="label_mileage_rate">Mileage Rate</string>
    <string name="label_per">per</string>
    <string name="label_mile">mile</string>
    <string name="label_km">km</string>
    <string name="label_expenses">Expenses</string>
    <string name="label_add_mileage">Add Mileage</string>
    <string name="label_expense_list">Expense List</string>
    <string name="label_edit_costing">Edit Costing</string>
    <string name="label_distance_travelled">Distance Travelled</string>
    <string name="label_notes">Notes</string>
    <string name="label_cost">Cost</string>
    <string name="label_expense_notes">Expense Notes</string>
    <string name="hint_expense_notes_here">Enter your expense notes here</string>
    <string name="label_no_expenses_found">No expenses found.</string>
    <string name="label_add_costing">Add Costing</string>
    <string name="label_add_expense">Add Expense</string>
    <string name="label_no_notes">No Notes</string>
    <string name="label_cost_details">Cost Details</string>
    <string name="label_mileage_details">Mileage Details</string>
    <string name="label_edit_mileage">Edit Mileage</string>
    <string name="label_costing_expense">Costing Expense</string>
    <string name="label_mileage_expense">Mileage Expense</string>
    <string name="hint_enter_costing_notes">Enter your costing notes here</string>
    <string name="hint_enter_mileage_notes">Enter your mileage notes</string>
    <string name="label_mileage_notes">Mileage Notes</string>
    <string name="label_costing_notes">Costing Notes</string>
    <string name="label_timesheet_report">Timesheet Report</string>
    <string name="description_timesheet_report">Generates a report based on your timesheets</string>
    <string name="label_export">Export</string>
    <string name="label_from_date">From Date</string>
    <string name="label_to_date">To Date</string>
    <string name="label_format">Format</string>
    <string name="label_send_to">Send To</string>
    <string name="label_csv">CSV</string>
    <string name="label_sd_card">SD Card</string>
    <string name="label_file_transfer">File Transfer</string>
    <string name="label_xml">Xml</string>
    <string name="label_export_format">Export Format</string>
    <string name="label_html">Html</string>
    <string name="label_add_time">Add Time</string>
    <string name="label_start_time">Start Time</string>
    <string name="label_end_time">End Time</string>
    <string name="label_duration">Duration</string>
    <string name="label_duration_in_hours">Duration (Hours)</string>
    <string name="message_need_to_punch_out">You need to punch out of the active task first</string>
    <string name="label_hour">hour</string>
    <string name="label_hours">hours</string>
    <string name="label_minute">minute</string>
    <string name="label_minutes">minutes</string>
    <string name="label_second">second</string>
    <string name="label_seconds">seconds</string>
    <string name="label_and">and</string>
    <string name="message_add_future_date">You cannot add time to a future date</string>
    <string name="label_invalid_duration">Please enter a valid duration value</string>
    <string name="label_na">N/A</string>
    <string name="label_export_punchins">Export PunchIns</string>
    <string name="label_timesheet_report_description">Shows timesheet punch in &amp; out times</string>
    <string name="label_report_list">Report List</string>
    <string name="label_id">Id</string>
    <string name="label_date">Date</string>
    <string name="label_in">In</string>
    <string name="label_out">Out</string>
    <string name="label_income">Income</string>
    <string name="label_overtime">Overtime</string>
    <string name="label_columns">Columns</string>
    <string name="label_columns_description">Select which columns to view</string>
    <string name="label_close">Close</string>
    <string name="label_select_all">Select All</string>
    <string name="label_reports">Reports</string>
    <string name="label_creating_report">Creating report&#8230;</string>
    <string name="label_formatting_report">Formatting the report&#8230;</string>
    <string name="label_sending_report">Sending the report&#8230;</string>
    <string name="label_complete">Complete</string>
    <string name="label_no_client">No client</string>
    <string name="label_income_by_task_report">Income By Task Report</string>
    <string name="label_income_by_task_report_description">Shows income expense grouped by task</string>
    <string name="label_income_report">Income Report</string>
    <string name="label_income_report_description">Shows income expense grouped by client</string>
    <string name="label_in_colon">In:</string>
    <string name="label_out_colon">Out:</string>
    <string name="label_name">Name</string>
    <string name="label_client_list_report">Client List Report</string>
    <string name="label_client_list_report_description">Displays a list of clients</string>
    <string name="label_task_list_report">Task List Report</string>
    <string name="label_task_list_report_description">Displays a list of tasks</string>
    <string name="label_timesheets">Timesheets</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="label_edit_mobile">Edit Mobile</string>
    <string name="label_ring_mobile">Ring Mobile</string>
    <string name="label_edit_email">Edit Email</string>
    <string name="label_send_email">Send Email</string>
    <string name="label_import">Import</string>
    <string name="label_import_contacts">Import Contacts</string>
    <string name="label_loading">Loading&#8230;</string>
    <string name="hint_find_your_contacts">Find your contacts</string>
    <string name="label_no_contacts_found">No contacts were found</string>
    <string name="message_at_least_one_contact">You need to select at least one contact</string>
    <string name="label_json">JSON</string>
    <string name="label_backup">Backup</string>
    <string name="label_test_provider">Test Provider</string>
    <string name="label_select_provider">Select Provider</string>
    <string name="label_backing_up">Backing up&#8230;</string>
    <string name="label_restore">Restore</string>
    <string name="label_select_checkpoint">Select Checkpoint</string>
    <string name="label_checkpoint">Checkpoint</string>
    <string name="message_backup_at_least_once">No checkpoints found, you need to backup your app at least once</string>
    <string name="message_backed_up">PunchIn has been backed up</string>
    <string name="admob_device_id">4E597064E4B7280D91D0E68176E630A8</string>
    <string name="publisher_id">a14fa6f1b18a80e</string>
</resources>