<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/action_bar_background" >

        <Button
            android:id="@+id/button_export"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/gd_action_bar_item"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/label_export"
            android:textColor="#fff"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/label_empty"
            android:src="@drawable/action_bar_divider" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/gd_action_bar_item"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/label_cancel"
            android:textColor="#fff"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_empty"
            android:src="@drawable/action_bar_divider" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_panel"
        android:layout_marginTop="5dp" 
        android:listSelector="@drawable/gd_action_bar_item">

    </ListView>

</RelativeLayout>