<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	    <LinearLayout
	        android:id="@+id/bottom_panel"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/action_bar_background" >

	        <Button
	            android:id="@+id/button_add_client"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:background="@drawable/gd_action_bar_item"
	            android:paddingLeft="6dp"
	            android:paddingRight="6dp"
	            android:text="@string/label_add_client"
	            android:textColor="#fff"
	            android:textStyle="bold" />

	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/label_empty"
	            android:src="@drawable/action_bar_divider" />

	        <Button
	            android:id="@+id/button_import_clients"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:background="@drawable/gd_action_bar_item"
	            android:paddingLeft="6dp"
	            android:paddingRight="6dp"
	            android:text="@string/label_import_contacts"
	            android:textColor="#fff"
	            android:textStyle="bold" />

	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/label_empty"
	            android:src="@drawable/action_bar_divider" />
	    </LinearLayout>
    
    <com.aku.apps.punchin.free.widgets.greendroid.DraggableListView
        android:id="@+id/listview_clients"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_panel"
        android:layout_below="@+id/textbox_filter"
        android:listSelector="@drawable/gd_action_bar_item">

    </com.aku.apps.punchin.free.widgets.greendroid.DraggableListView>

    <EditText
        android:id="@+id/textbox_filter"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:hint="@string/hint_filter_clients"
        android:paddingRight="70dp" 
        android:paddingLeft="10dp" 
        android:inputType="text|textAutoComplete|textCapSentences"
        android:maxLength="100" >
    </EditText>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="60dp"
        android:layout_height="69dp"
        android:layout_alignBottom="@+id/textbox_filter"
        android:layout_alignParentTop="true" android:background="@drawable/action_bar_background" android:layout_marginBottom="8dp" android:layout_marginTop="5dp" android:layout_marginRight="5dp" android:layout_alignParentRight="true">

        <Button
            android:id="@+id/button_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gd_action_bar_item"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/gd_action_bar_item"
            android:src="@drawable/gd_action_bar_search" 
            android:contentDescription="@string/label_empty"/>

    </RelativeLayout>

</RelativeLayout>